--- a/html/views/overlay/admin/index.css
+++ b/html/views/overlay/admin/index.css
@@ -18,6 +18,7 @@ h2 { margin: 0 0 10px 0; padding: 4px 4px; display: block; border-radius: 6px; t
 
 
 button, input, select { outline: none; cursor: pointer; padding: 8px 8px; border-radius: 8px; font-size: .8em; width: 100%; color: white; background: #666; margin-bottom: 2px; } 
+input[type=number] { width: 50%; }
 
 input[type="color"] { padding: 0; width: 75%; } 
 input[type="color"][cleared="true"] + button { background-color: #ff0000; } 
@@ -26,7 +27,6 @@ button.ClearPrev { padding: 0; width: 20%; }
 select { display: inline-block; appearance:none; } 
 
 button.ToggleSwitch { cursor: pointer; outline: none; width: 100%; transition: all .5s ease; } 
-
 
 button.ToggleSwitch { border: 0px solid; border-color: #999 #999 #999 #FF0000; background: #666; border-left-width: 20px; border-right-width: 0px; text-decoration: none; } 
 button.ToggleSwitch.current { border: 0px solid; border-color: #999 #00FF00 #999 #999; background: #666; border-right-width: 20px; border-left-width: 0px; text-decoration: none; } 
