--- a/html/components/data-tab.css
+++ b/html/components/data-tab.css
@@ -25,3 +25,24 @@
 #sbData table.Hide tbody { display: none; } 
 #sbData table th { border-radius: 12px 12px 0px 0px; } 
 #sbData table.Hide th { border-radius: 12px; } 
+
+@keyframes spinner {
+    0%   { transform: translate3d(-50%, -50%, 0) rotate(0deg);   }
+    100% { transform: translate3d(-50%, -50%, 0) rotate(360deg); }
+}
+#sbData .spin {
+    animation: 1.5s linear infinite spinner;
+    animation-play-state: inherit;
+    border: solid 4px #cfd0d1;
+    border-bottom-color: #1c87c9;
+    border-radius: 50%;
+    content: "";
+    height: 20px;
+    width: 20px;
+    position: relative;
+    top: 20px;
+    left: 20px;
+    display: inline-block;
+    transform: translate3d(-50%, -50%, 0);
+    will-change: transform;
+}
