--- a/html/components/igrf-tab.css
+++ b/html/components/igrf-tab.css
@@ -46,3 +46,24 @@ div.OfficialRemoveDialog a.AreYouSure { font-weight: bold; font-size: 300%; }
 div.OfficialRemoveDialog button.No { float: left; } 
 div.OfficialRemoveDialog button.Yes { float: right; } 
 /* End Official Remove Dialog */
+
+@keyframes spinner {
+    0%   { transform: translate3d(-50%, -50%, 0) rotate(0deg);   }
+    100% { transform: translate3d(-50%, -50%, 0) rotate(360deg); }
+}
+#Igrf .spin {
+    animation: 1.5s linear infinite spinner;
+    animation-play-state: inherit;
+    border: solid 4px #cfd0d1;
+    border-bottom-color: #1c87c9;
+    border-radius: 50%;
+    content: "";
+    height: 20px;
+    width: 20px;
+    position: relative;
+    top: 20px;
+    left: 20px;
+    display: inline-block;
+    transform: translate3d(-50%, -50%, 0);
+    will-change: transform;
+}
