--- a/html/views/overlay/admin/index.css
+++ b/html/views/overlay/admin/index.css
@@ -1,4 +1,6 @@
-body { font-family: Ubuntu, sans-serif; margin: 0; } 
+@font-face {font-family: 'LiberationSans'; src: url("/fonts/LiberationSans-Regular.ttf") format("truetype");} 
+
+body { font-family:'LiberationSans',sans-serif; margin: 0; } 
 
 label { font-variant: small-caps; } 
 
