--- a/html/custom/view/example.html
+++ b/html/custom/view/example.html
@@ -10,6 +10,7 @@
  See the file COPYING for details.
 -->
 
+<link rel="stylesheet" href="/styles/fonts.css" type="text/css" />
 <style type="text/css">
 body>div { width: 100%; height: 100%; }
 body {
@@ -20,7 +21,7 @@ body {
 p { font-weight: bold; font-size: 300%; }
 
 </style>
-
+</head>
 <body>
 
 <div>
