--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="/json/WS.js"></script>
     <script type="text/javascript" src="/views/common.js"></script>
 
+    <link rel="stylesheet" href="/styles/fonts.css" type="text/css" />
     <style type="text/css" title="jsStyle"></style>
   </head>
   <body class="preload">
