--- a/html/views/overlay/stats.html
+++ b/html/views/overlay/stats.html
@@ -5,6 +5,8 @@
     <script type="text/javascript" src="/json/WS.js"></script>
     <script type="text/javascript" src="dataset.js"></script>
     <script type="text/javascript" src="statengine.js"></script>
+
+    <link rel="stylesheet" href="/styles/fonts.css" type="text/css" />
   </head>
   <body>
     Stats Framework Test - This is unmaintained and likely broken
