--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -6,6 +6,8 @@
     <script type="text/javascript" src="/json/core.js"></script>
     <script type="text/javascript" src="/json/WS.js"></script>
     <script type="text/javascript" src="/views/common.js"></script>
+
+    <link rel="stylesheet" href="/styles/fonts.css" type="text/css" />
   </head>
   <body>
     <div class="ConnectionError">Not connected</div>
