--- a/html/views/copy/index.html
+++ b/html/views/copy/index.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="/components/sk-sheet.js"></script>
     <script type="text/javascript" src="/components/plt-input.js"></script>
     <script type="text/javascript" src="/components/lt-sheet.js"></script>
+
+    <link rel="stylesheet" href="/styles/fonts.css" type="text/css" />
     <link rel="stylesheet" href="/components/roster-sheet.css" type="text/css" />
     <link rel="stylesheet" href="/components/sk-sheet.css" type="text/css" />
     <link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
