--- a/html/views/overlay/admin/index.css
+++ b/html/views/overlay/admin/index.css
@@ -1,6 +1,4 @@
-@font-face {font-family: 'LiberationSans'; src: url("/fonts/LiberationSans-Regular.ttf") format("truetype");} 
-
-body { font-family:'LiberationSans',sans-serif; margin: 0; } 
+body { margin: 0; } 
 
 label { font-variant: small-caps; } 
 
