--- a/html/views/wb/index.html
+++ b/html/views/wb/index.html
@@ -6,6 +6,8 @@
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
     <script type="text/javascript" src="/components/plt-input.js"></script>
+
+    <link rel="stylesheet" href="/styles/fonts.css" type="text/css" />
     <link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
   </head>
   <body>
